Fix overflow issue on language dropdown

--- a/app/assets/stylesheets/_header.css.scss
+++ b/app/assets/stylesheets/_header.css.scss
@@ -2,7 +2,6 @@
 @import "compass/utilities";
 .hummingbird-header-1 {
   // set logo position and size in header
-  border-bottom: 1px solid #e4e4e4;
   .name {
     padding-left: 10px;
     img {
